--- a/docs/Project/KeyStone/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/docs/Project/KeyStone/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -138,7 +138,7 @@ MRUItem3=/Game/Tanner/Levels/MainMenuLevel
 MRUItem4=/Game/DungeonTESTLevel1
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Humza/SkeletonNoArmor
+ContentBrowserTab1.SelectedPaths=/Game/MedievalDungeon/Maps
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 ContentBrowserTab1.SourcesExpanded=True
@@ -352,7 +352,7 @@ BoxComponent.Shape=True
 BoxComponent.Navigation=True
 BoxComponent.ComponentTick=True
 BoxComponent.Rendering=True
-BoxComponent.Physics=True
+BoxComponent.Physics=False
 BoxComponent.Collision=True
 BoxComponent.Tags=True
 BoxComponent.ComponentReplication=True
@@ -1570,6 +1570,28 @@ ArrowComponent.Tags=True
 ArrowComponent.ComponentReplication=True
 ArrowComponent.Cooking=True
 ArrowComponent.Events=True
+SkeletalMeshComponent.Physics=True
+SkeletalMeshComponent.Variable=True
+SkeletalMeshComponent.TransformCommon=True
+SkeletalMeshComponent.Sockets=True
+SkeletalMeshComponent.Animation=True
+SkeletalMeshComponent.Mesh=True
+SkeletalMeshComponent.Materials=True
+SkeletalMeshComponent.ComponentTick=True
+SkeletalMeshComponent.Clothing=True
+SkeletalMeshComponent.MasterPoseComponent=True
+SkeletalMeshComponent.ClothingSimulation=True
+SkeletalMeshComponent.Collision=True
+SkeletalMeshComponent.Lighting=True
+SkeletalMeshComponent.Rendering=True
+SkeletalMeshComponent.SkinWeights=True
+SkeletalMeshComponent.Navigation=True
+SkeletalMeshComponent.VirtualTexture=True
+SkeletalMeshComponent.Tags=True
+SkeletalMeshComponent.ComponentReplication=True
+SkeletalMeshComponent.Activation=True
+SkeletalMeshComponent.Cooking=True
+SkeletalMeshComponent.Events=True
 
 [PlacementMode]
 RecentlyPlaced=/Game/Humza/SkeletonNoArmor/SkeletonEnemy.SkeletonEnemy;
