Stopped the player from attacking when using chests

--- a/docs/Project/KeyStone/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/docs/Project/KeyStone/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -140,7 +140,7 @@ MRUItem4=/Game/DungeonTESTLevel1
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/Tanner/Levels
 ContentBrowserTab1.SelectedPaths=/Game/InventorySystem/Consumables
-ContentBrowserTab1.SelectedPaths=/Game
+ContentBrowserTab1.SelectedPaths=/Game/InventorySystem/Chest
 None=======
 None=======
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
@@ -220,25 +220,25 @@ CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Player
-MRUItem1=/Game/InventorySystem/Consumables/DamageBuffPotion
-MRUItem2=/Game/InventorySystem/Consumables/StaminaRegePotion
-MRUItem3=/Game/InventorySystem/Consumables/ManaPotion
-MRUItem4=/Game/InventorySystem/Consumables/StaminaPotion
-MRUItem5=/Game/InventorySystem/Chest/WorkingChest2
-MRUItem6=/Game/InventorySystem/Chest/WorkingChest1
-MRUItem7=/Game/InventorySystem/UI/InventorySlotWG
-MRUItem8=/Game/Alexis/AI/EnemyAiAttacks/Task/findplayerlocation
-MRUItem9=/Game/MedievalDungeon/Blueprints/BP_Door_SingleKey
-MRUItem10=/Game/MedievalDungeon/Maps/DungeonLevel
-MRUItem11=/Engine/BasicShapes/Cube
-MRUItem12=/Game/SpawnSeverog
-MRUItem13=/Game/MedievalDungeon/Blueprints/TEST
-MRUItem14=/Game/MedievalDungeon/Blueprints/BP_Door_Single_Key
-MRUItem15=/Game/MedievalDungeon/Blueprints/BP_Collectables_Door
-MRUItem16=/Game/InventorySystem/Chest/WorkingChest5
-MRUItem17=/Game/InventorySystem/Chest/WorkingChest4
-MRUItem18=/Game/InventorySystem/Chest/WorkingChest3
+MRUItem0=/Game/InventorySystem/Chest/WorkingChest5
+MRUItem1=/Game/InventorySystem/Chest/WorkingChest4
+MRUItem2=/Game/InventorySystem/Chest/WorkingChest3
+MRUItem3=/Game/InventorySystem/Chest/WorkingChest2
+MRUItem4=/Game/InventorySystem/Chest/WorkingChest1
+MRUItem5=/Game/Player
+MRUItem6=/Game/InventorySystem/Consumables/DamageBuffPotion
+MRUItem7=/Game/InventorySystem/Consumables/StaminaRegePotion
+MRUItem8=/Game/InventorySystem/Consumables/ManaPotion
+MRUItem9=/Game/InventorySystem/Consumables/StaminaPotion
+MRUItem10=/Game/InventorySystem/UI/InventorySlotWG
+MRUItem11=/Game/Alexis/AI/EnemyAiAttacks/Task/findplayerlocation
+MRUItem12=/Game/MedievalDungeon/Blueprints/BP_Door_SingleKey
+MRUItem13=/Game/MedievalDungeon/Maps/DungeonLevel
+MRUItem14=/Engine/BasicShapes/Cube
+MRUItem15=/Game/SpawnSeverog
+MRUItem16=/Game/MedievalDungeon/Blueprints/TEST
+MRUItem17=/Game/MedievalDungeon/Blueprints/BP_Door_Single_Key
+MRUItem18=/Game/MedievalDungeon/Blueprints/BP_Collectables_Door
 MRUItem19=/Game/InventorySystem/UI/ChestSlotWG
 
 [DetailCategories]
@@ -1738,6 +1738,11 @@ DamageBuffPotion_C.TransformCommon=True
 StaminaRegePotion_C.TransformCommon=True
 
 [PlacementMode]
+RecentlyPlaced=/Game/InventorySystem/Chest/WorkingChest5.WorkingChest5;
+RecentlyPlaced=/Game/InventorySystem/Chest/WorkingChest4.WorkingChest4;
+RecentlyPlaced=/Game/InventorySystem/Chest/WorkingChest3.WorkingChest3;
+RecentlyPlaced=/Game/InventorySystem/Chest/WorkingChest2.WorkingChest2;
+RecentlyPlaced=/Game/InventorySystem/Chest/WorkingChest1.WorkingChest1;
 RecentlyPlaced=/Game/InventorySystem/Consumables/StaminaRegePotion.StaminaRegePotion;
 RecentlyPlaced=/Game/InventorySystem/Consumables/DamageBuffPotion.DamageBuffPotion;
 RecentlyPlaced=/Game/InventorySystem/Consumables/TalentToken.TalentToken;
@@ -1747,16 +1752,11 @@ RecentlyPlaced=/Game/MedievalDungeon/Blueprints/teleport.teleport;
 RecentlyPlaced=/Game/MedievalDungeon/Blueprints/BP_key.BP_key;
 RecentlyPlaced=/Game/MedievalDungeon/Blueprints/BP_Door_SingleKey.BP_Door_SingleKey;
 RecentlyPlaced=/Game/MedievalDungeon/Blueprints/BP_Door_Single_Key.BP_Door_Single_Key;
-RecentlyPlaced=/Game/InventorySystem/Chest/WorkingChest2.WorkingChest2;
-RecentlyPlaced=/Game/InventorySystem/Chest/WorkingChest1.WorkingChest1;
 RecentlyPlaced=/Game/Humza/SkeletonNoArmor/SkeletonEnemy.SkeletonEnemy;
 RecentlyPlaced=/Game/Player.Player;
 RecentlyPlaced=/Game/MedievalDungeon/Blueprints/BP_collectables.BP_collectables;
 RecentlyPlaced=/Game/MedievalDungeon/Blueprints/BP_Locked_Cell_Multiple_Key.BP_Locked_Cell_Multiple_Key;
 RecentlyPlaced=/Game/Tanner/MainMenu/BluePrints/BP_checkpoint.BP_checkpoint;
-RecentlyPlaced=/Game/InventorySystem/Chest/WorkingChest4.WorkingChest4;
-RecentlyPlaced=/Game/InventorySystem/Chest/WorkingChest5.WorkingChest5;
-RecentlyPlaced=/Game/InventorySystem/Chest/WorkingChest3.WorkingChest3;
 RecentlyPlaced=/Game/InventorySystem/Chest/ChestBP.ChestBP;
 None=======
 BehaviorTreeGraphNode_Root.AI=True
@@ -1940,13 +1940,13 @@ ActorComponent=
 Player_C=
 Player_C=
 Player_C=
-Player_C="\"Object.Affected\" "
+Player_C="\"Object.DodgeStamCheck\" "
 Character=
 Character=
-Character="\"Object.Affected\" "
+Character="\"Object.DodgeStamCheck\" "
 Pawn=
 Pawn=
-Pawn="\"Object.Affected\" "
+Pawn="\"Object.DodgeStamCheck\" "
 MySaveGame_C="\"Object.Save1Level\" "
 MySaveGame_C="\"Object.SkeletonHealth\" "
 MySaveGame_C="\"Object.CollectedPickups\" "
@@ -2035,7 +2035,7 @@ Texture2D.Compression=True
 
 [RootWindow]
 ScreenPosition=X=308.000 Y=148.000
-WindowSize=X=1306.400 Y=746.400
+WindowSize=X=1308.000 Y=748.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -3081,7 +3081,7 @@ BP_Locked_Cell_Multiple_Key_C=CapsuleComponent.Collision.Collision,
 ThirdPersonGameMode_1_C=
 SkeletonEnemy_C=CapsuleComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,K2Node_VariableSet.DefaultValueCategory.None,
 TutorialSkeleton_C=CapsuleComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,K2Node_VariableSet.DefaultValueCategory.None,
-WorkingChest1_C=
+WorkingChest1_C=CapsuleComponent.Collision.Collision,
 FinalBossBP_C=PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,K2Node_VariableSet.DefaultValueCategory.None,CapsuleComponent.Collision.Collision,
 TEST_C=PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,K2Node_VariableSet.DefaultValueCategory.None,CapsuleComponent.Collision.Collision,
 BP_key_C=PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,K2Node_VariableSet.DefaultValueCategory.None,CapsuleComponent.Collision.Collision,
@@ -3093,6 +3093,7 @@ HealthPotion_C=CapsuleComponent.Collision.Collision,
 StaminaPotion_C=
 StaminaRegePotion_C=
 DamageBuffPotion_C=
+WorkingChest3_C=CapsuleComponent.Collision.Collision,
 
 [SelectionDetails]
 PreserveScaleRatio=True
