--- a/docs/Project/KeyStone/Saved/Config/Windows/Engine.ini
+++ b/docs/Project/KeyStone/Saved/Config/Windows/Engine.ini
@@ -59,3 +59,11 @@ MLSDKPath=(Path="")
 [/Script/UnrealEd.EditorEngine]
 FlipNormalMapGreenChannel=False
 
+[WindowsApplication.Accessibility]
+StickyKeysHotkey=False
+ToggleKeysHotkey=False
+FilterKeysHotkey=True
+StickyKeysConfirmation=True
+ToggleKeysConfirmation=True
+FilterKeysConfirmation=True
+
