made the stamina regen faster

--- a/docs/Project/KeyStone/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/docs/Project/KeyStone/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -146,7 +146,7 @@ MRUItem5=/Game/Tanner/Levels/MainMenuLevel
 ContentBrowserTab1.SelectedPaths=/Game/Tanner/Levels
 ContentBrowserTab1.SelectedPaths=/Game/InventorySystem/Consumables
 ContentBrowserTab1.SelectedPaths=/Game/MedievalDungeon/Blueprints/BP_GREEN
-ContentBrowserTab1.SelectedPaths=/Game/MedievalDungeon/Maps
+ContentBrowserTab1.SelectedPaths=/Game/InventorySystem/Consumables
 None=======
 None=======
 None=======
@@ -223,34 +223,36 @@ AssetDialog.CurrentViewType=1
 
 [EditorStartup]
 LastLevel=/Game/DungeonLevel_MAZE_ADDED
-LastLevel=/Game/MedievalDungeon/Maps/DungeonLevel
+LastLevel=/Game/NEW_DungeonLevel_TEST
 None=======
 
 [AssetEditorSubsystem]
 CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
+OpenAssetsAtExit=/Game/InventorySystem/Consumables/HealthPotion.HealthPotion
+OpenAssetsAtExit=/Game/InventorySystem/Consumables/StaminaRegePotion.StaminaRegePotion
 
 [ContentBrowserRecent]
-MRUItem0=/Game/MedievalDungeon/Maps/DungeonLevel
-MRUItem1=/Game/MedievalDungeon/Blueprints/WIN
-MRUItem2=/Game/MedievalDungeon/Maps/DungeonLevel2
-MRUItem3=/Game/Alexis/AI/EnemyAiAttacks/Task/Attack1BTtask
-MRUItem4=/Game/Alexis/AI/KnightBT
-MRUItem5=/Game/Alexis/AI/KnightAI_BP
-MRUItem6=/Game/Alexis/AI/EnemyAiAttacks/Deco/IsInCloseRangeDistance
-MRUItem7=/Game/Alexis/AI/EnemyAiAttacks/Task/stanceChange
-MRUItem8=/Game/Alexis/AI/EnemyAiAttacks/Task/chaseplayer
-MRUItem9=/Game/Alexis/AI/EnemyAiAttacks/Task/findplayerlocation
-MRUItem10=/Game/Alexis/AI/KnightBB
-MRUItem11=/Game/Alexis/AI/KnightController
-MRUItem12=/Game/NEW_DungeonLevel_TEST
-MRUItem13=/Game/DungeonTESTLevel1
-MRUItem14=/Game/DungeonLevel_MAZE_ADDED
-MRUItem15=/Game/Player
-MRUItem16=/Game/Tanner/SaveGame/MySaveGame
-MRUItem17=/Game/InventorySystem/UI/InventorySlotWG
-MRUItem18=/Game/InventorySystem/UI/InventoryWG
-MRUItem19=/Game/Tanner/MainMenu/MyGameInstance
+MRUItem0=/Game/Player
+MRUItem1=/Game/InventorySystem/Consumables/StaminaRegePotion
+MRUItem2=/Game/InventorySystem/Consumables/TalentToken
+MRUItem3=/Game/InventorySystem/Consumables/HealthPotion
+MRUItem4=/Game/MedievalDungeon/Maps/DungeonLevel
+MRUItem5=/Game/MedievalDungeon/Blueprints/WIN
+MRUItem6=/Game/MedievalDungeon/Maps/DungeonLevel2
+MRUItem7=/Game/Alexis/AI/EnemyAiAttacks/Task/Attack1BTtask
+MRUItem8=/Game/Alexis/AI/KnightBT
+MRUItem9=/Game/Alexis/AI/KnightAI_BP
+MRUItem10=/Game/Alexis/AI/EnemyAiAttacks/Deco/IsInCloseRangeDistance
+MRUItem11=/Game/Alexis/AI/EnemyAiAttacks/Task/stanceChange
+MRUItem12=/Game/Alexis/AI/EnemyAiAttacks/Task/chaseplayer
+MRUItem13=/Game/Alexis/AI/EnemyAiAttacks/Task/findplayerlocation
+MRUItem14=/Game/Alexis/AI/KnightBB
+MRUItem15=/Game/Alexis/AI/KnightController
+MRUItem16=/Game/NEW_DungeonLevel_TEST
+MRUItem17=/Game/DungeonTESTLevel1
+MRUItem18=/Game/DungeonLevel_MAZE_ADDED
+MRUItem19=/Game/Tanner/SaveGame/MySaveGame
 
 [DetailCategories]
 BP_Openable_Door_C.TransformCommon=True
@@ -2427,8 +2429,8 @@ Texture2D.Texture=True
 Texture2D.Compression=True
 
 [RootWindow]
-ScreenPosition=X=308.000 Y=148.000
-WindowSize=X=1315.200 Y=755.200
+ScreenPosition=X=-153.600 Y=279.200
+WindowSize=X=1316.800 Y=756.800
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
