minor map changes

--- a/docs/Project/KeyStone/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/docs/Project/KeyStone/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -146,7 +146,7 @@ MRUItem5=/Game/Tanner/Levels/MainMenuLevel
 ContentBrowserTab1.SelectedPaths=/Game/Tanner/Levels
 ContentBrowserTab1.SelectedPaths=/Game/InventorySystem/Consumables
 ContentBrowserTab1.SelectedPaths=/Game/MedievalDungeon/Blueprints/BP_GREEN
-ContentBrowserTab1.SelectedPaths=/Game/InventorySystem/Consumables
+ContentBrowserTab1.SelectedPaths=/Game
 None=======
 None=======
 None=======
@@ -223,36 +223,34 @@ AssetDialog.CurrentViewType=1
 
 [EditorStartup]
 LastLevel=/Game/DungeonLevel_MAZE_ADDED
-LastLevel=/Game/NEW_DungeonLevel_TEST
+LastLevel=/Game/MedievalDungeon/Maps/DungeonLevel
 None=======
 
 [AssetEditorSubsystem]
 CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
-OpenAssetsAtExit=/Game/InventorySystem/Consumables/HealthPotion.HealthPotion
-OpenAssetsAtExit=/Game/InventorySystem/Consumables/StaminaRegePotion.StaminaRegePotion
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Player
-MRUItem1=/Game/InventorySystem/Consumables/StaminaRegePotion
-MRUItem2=/Game/InventorySystem/Consumables/TalentToken
-MRUItem3=/Game/InventorySystem/Consumables/HealthPotion
-MRUItem4=/Game/MedievalDungeon/Maps/DungeonLevel
-MRUItem5=/Game/MedievalDungeon/Blueprints/WIN
-MRUItem6=/Game/MedievalDungeon/Maps/DungeonLevel2
-MRUItem7=/Game/Alexis/AI/EnemyAiAttacks/Task/Attack1BTtask
-MRUItem8=/Game/Alexis/AI/KnightBT
-MRUItem9=/Game/Alexis/AI/KnightAI_BP
-MRUItem10=/Game/Alexis/AI/EnemyAiAttacks/Deco/IsInCloseRangeDistance
-MRUItem11=/Game/Alexis/AI/EnemyAiAttacks/Task/stanceChange
-MRUItem12=/Game/Alexis/AI/EnemyAiAttacks/Task/chaseplayer
-MRUItem13=/Game/Alexis/AI/EnemyAiAttacks/Task/findplayerlocation
-MRUItem14=/Game/Alexis/AI/KnightBB
-MRUItem15=/Game/Alexis/AI/KnightController
-MRUItem16=/Game/NEW_DungeonLevel_TEST
-MRUItem17=/Game/DungeonTESTLevel1
-MRUItem18=/Game/DungeonLevel_MAZE_ADDED
-MRUItem19=/Game/Tanner/SaveGame/MySaveGame
+MRUItem0=/Game/Humza/SkeletonNoArmor/SkeletonEnemy
+MRUItem1=/Game/Player
+MRUItem2=/Game/MedievalDungeon/Maps/DungeonLevel
+MRUItem3=/Game/InventorySystem/Consumables/StaminaRegePotion
+MRUItem4=/Game/InventorySystem/Consumables/TalentToken
+MRUItem5=/Game/InventorySystem/Consumables/HealthPotion
+MRUItem6=/Game/MedievalDungeon/Blueprints/WIN
+MRUItem7=/Game/MedievalDungeon/Maps/DungeonLevel2
+MRUItem8=/Game/Alexis/AI/EnemyAiAttacks/Task/Attack1BTtask
+MRUItem9=/Game/Alexis/AI/KnightBT
+MRUItem10=/Game/Alexis/AI/KnightAI_BP
+MRUItem11=/Game/Alexis/AI/EnemyAiAttacks/Deco/IsInCloseRangeDistance
+MRUItem12=/Game/Alexis/AI/EnemyAiAttacks/Task/stanceChange
+MRUItem13=/Game/Alexis/AI/EnemyAiAttacks/Task/chaseplayer
+MRUItem14=/Game/Alexis/AI/EnemyAiAttacks/Task/findplayerlocation
+MRUItem15=/Game/Alexis/AI/KnightBB
+MRUItem16=/Game/Alexis/AI/KnightController
+MRUItem17=/Game/NEW_DungeonLevel_TEST
+MRUItem18=/Game/DungeonTESTLevel1
+MRUItem19=/Game/DungeonLevel_MAZE_ADDED
 
 [DetailCategories]
 BP_Openable_Door_C.TransformCommon=True
@@ -2062,6 +2060,12 @@ BP_Torch_Green_C.Replication=True
 BP_Torch_Green_C.Collision=True
 BP_Torch_Green_C.Input=True
 BP_Torch_Green_C.Actor=True
+BP_Cell_Door_Openable_C.TransformCommon=True
+BP_Cell_Door_Openable_C.Rendering=True
+BP_Cell_Door_Openable_C.Replication=True
+BP_Cell_Door_Openable_C.Collision=True
+BP_Cell_Door_Openable_C.Input=True
+BP_Cell_Door_Openable_C.Actor=True
 
 [PlacementMode]
 RecentlyPlaced=/Game/Player.Player;
@@ -2211,7 +2215,7 @@ None=======
 /Game/InventorySystem/UI/TalentTokenHUD.TalentTokenHUD=1
 /Game/InventorySystem/Consumables/TalentToken.TalentToken=1
 /Game/KeystoneThirdPerson/Blueprints/HUD/ChooseRespawn.ChooseRespawn=1
-/Game/Player.Player=1
+/Game/Player.Player=0
 /Game/InventorySystem/upgrade.upgrade=1
 /Game/InventorySystem/TalentTokenTexture.TalentTokenTexture=1
 /Game/Alexis/AI/KnightAI_BP.KnightAI_BP=1
@@ -2222,7 +2226,7 @@ None=======
 /Game/Humza/SkeletonNoArmor/SkeleNoArmorAiController.SkeleNoArmorAiController=1
 /Game/Humza/SkeletonNoArmor/SkeletonBBnoArmor.SkeletonBBnoArmor=1
 /Game/Tanner/MainMenu/Widgets/ControlsWidget.ControlsWidget=0
-/Game/Humza/SkeletonNoArmor/SkeletonEnemy.SkeletonEnemy=1
+/Game/Humza/SkeletonNoArmor/SkeletonEnemy.SkeletonEnemy=0
 /Game/Tanner/SaveGame/MySaveGame.MySaveGame=1
 /Game/MedievalDungeon/Blueprints/BP_Door_Single_Key.BP_Door_Single_Key=0
 /Game/MedievalDungeon/Blueprints/BP_Collectables_Door.BP_Collectables_Door=0
@@ -2409,6 +2413,7 @@ BP_collectables_C=
 AIPerceptionComponent="\"Object.AI Perception.SensesConfig\" \"Object.AI Perception.SensesConfig.SensesConfig[0]\" \"Object.AI Perception.SensesConfig.SensesConfig[0].Object.Sense\" "
 PointLight="\"Object.Light.PointLightComponent.Object.Light.LightColor\" "
 Light="\"Object.Light.PointLightComponent.Object.Light.LightColor\" "
+SphereComponent=
 
 [SuppressableDialogs]
 ChangeVariableType_Warning=True
@@ -2430,7 +2435,7 @@ Texture2D.Compression=True
 
 [RootWindow]
 ScreenPosition=X=-153.600 Y=279.200
-WindowSize=X=1316.800 Y=756.800
+WindowSize=X=1318.400 Y=758.400
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -3499,7 +3504,7 @@ DamageBuffPotion_C=PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.
 WorkingChest3_C=CapsuleComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,K2Node_VariableSet.DefaultValueCategory.None,
 BP_Torch_C=PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,K2Node_VariableSet.DefaultValueCategory.None,CapsuleComponent.Collision.Collision,KnightAI_BP_C.Physics.ConstraintsGroup,KnightAI_BP_C.Collision.Collision,KnightAI_BP_C.Rendering.TextureStreaming,KnightAI_BP_C.Rendering.LOD,
 BrushComponent=CapsuleComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,K2Node_VariableSet.DefaultValueCategory.None,
-BrushComponent=PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,K2Node_VariableSet.DefaultValueCategory.None,CapsuleComponent.Collision.Collision,
+BrushComponent=
 Actor=PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,K2Node_VariableSet.DefaultValueCategory.None,CapsuleComponent.Collision.Collision,KnightAI_BP_C.Physics.ConstraintsGroup,KnightAI_BP_C.Collision.Collision,KnightAI_BP_C.Rendering.TextureStreaming,KnightAI_BP_C.Rendering.LOD,
 WorkingChest2_C=CapsuleComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,K2Node_VariableSet.DefaultValueCategory.None,
 SpawnSeverog_C=CapsuleComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,K2Node_VariableSet.DefaultValueCategory.None,
@@ -3522,7 +3527,7 @@ BP_Candle_Used_A_GREEN_C=PropertyWrapper.DefaultValueCategory.None,K2Node_Variab
 BP_Candle_Used_B_GREEN_C=PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,K2Node_VariableSet.DefaultValueCategory.None,CapsuleComponent.Collision.Collision,
 TEST_1_C=PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,K2Node_VariableSet.DefaultValueCategory.None,CapsuleComponent.Collision.Collision,
 BP_Door_Single_Key_C=PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,K2Node_VariableSet.DefaultValueCategory.None,CapsuleComponent.Collision.Collision,
-BP_Door_Collectables_C=PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,K2Node_VariableSet.DefaultValueCategory.None,CapsuleComponent.Collision.Collision,
+BP_Door_Collectables_C=PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,K2Node_VariableSet.DefaultValueCategory.None,CapsuleComponent.Collision.Collision,KnightAI_BP_C.Physics.ConstraintsGroup,KnightAI_BP_C.Collision.Collision,KnightAI_BP_C.Rendering.TextureStreaming,KnightAI_BP_C.Rendering.LOD,SphereComponent.Collision.Collision,
 Brush=PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,K2Node_VariableSet.DefaultValueCategory.None,CapsuleComponent.Collision.Collision,
 InventoryComponent_C=
 BP_EndLevel_C=PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,K2Node_VariableSet.DefaultValueCategory.None,CapsuleComponent.Collision.Collision,
@@ -3530,6 +3535,8 @@ PostProcessVolume=PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.D
 BP_Chandalier_C=PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,K2Node_VariableSet.DefaultValueCategory.None,CapsuleComponent.Collision.Collision,KnightAI_BP_C.Physics.ConstraintsGroup,KnightAI_BP_C.Collision.Collision,KnightAI_BP_C.Rendering.TextureStreaming,KnightAI_BP_C.Rendering.LOD,
 BP_FireCoals_01a_C=PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,K2Node_VariableSet.DefaultValueCategory.None,CapsuleComponent.Collision.Collision,
 BP_CandleStick_Iron_C=PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,K2Node_VariableSet.DefaultValueCategory.None,CapsuleComponent.Collision.Collision,KnightAI_BP_C.Physics.ConstraintsGroup,KnightAI_BP_C.Collision.Collision,KnightAI_BP_C.Rendering.TextureStreaming,KnightAI_BP_C.Rendering.LOD,
+SphereComponent=SphereComponent.Collision.Collision,
+Dragonslayer_C=PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,K2Node_VariableSet.DefaultValueCategory.None,CapsuleComponent.Collision.Collision,KnightAI_BP_C.Physics.ConstraintsGroup,KnightAI_BP_C.Collision.Collision,KnightAI_BP_C.Rendering.TextureStreaming,KnightAI_BP_C.Rendering.LOD,SphereComponent.Collision.Collision,
 
 [SelectionDetails]
 PreserveScaleRatio=True
