End Game And Saving Sword

--- a/docs/Project/KeyStone/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/docs/Project/KeyStone/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -136,17 +136,17 @@ CurrentRotGridSize=0
 
 [MRU]
 MRUItem0=/Game/NEW_DungeonLevel_TEST
-MRUItem1=/Game/MedievalDungeon/Maps/DungeonLevel
-MRUItem2=/Game/MedievalDungeon/Maps/DungeonLevel2
-MRUItem3=/Game/DungeonTESTLevel1
-MRUItem4=/Game/DungeonLevel_MAZE_ADDED
-MRUItem5=/Game/Tanner/Levels/MainMenuLevel
+MRUItem1=/Game/Tanner/Levels/MainMenuLevel
+MRUItem2=/Game/MedievalDungeon/Maps/DungeonLevel
+MRUItem3=/Game/MedievalDungeon/Maps/DungeonLevel2
+MRUItem4=/Game/DungeonTESTLevel1
+MRUItem5=/Game/DungeonLevel_MAZE_ADDED
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/Tanner/Levels
 ContentBrowserTab1.SelectedPaths=/Game/InventorySystem/Consumables
 ContentBrowserTab1.SelectedPaths=/Game/MedievalDungeon/Blueprints/BP_GREEN
-ContentBrowserTab1.SelectedPaths=/Game/Evan/KeystoneImport
+ContentBrowserTab1.SelectedPaths=/Game/Tanner/MainMenu/Widgets
 None=======
 None=======
 None=======
@@ -183,7 +183,7 @@ ContentBrowserTab2.ActiveTypeFilters=
 ContentBrowserTab2.EnabledTypeFilters=
 ContentBrowserTab2.ActiveFrontendFilters=
 ContentBrowserTab2.EnabledFrontendFilters=
-ContentBrowserTab2.SelectedPaths=/Game/Tanner/MainMenu/BluePrints
+ContentBrowserTab2.SelectedPaths=/Game/KeystoneThirdPerson/Blueprints/HUD
 ContentBrowserTab2.PluginFilters=
 ContentBrowserTab2.Favorites.SelectedPaths=
 ContentBrowserTab2.CollectionsExpanded=True
@@ -229,30 +229,34 @@ None=======
 [AssetEditorSubsystem]
 CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
+OpenAssetsAtExit=/Game/Tanner/MainMenu/Widgets/CreditWidget.CreditWidget
+OpenAssetsAtExit=/Game/MedievalDungeon/Blueprints/WIN.WIN
+OpenAssetsAtExit=/Game/KeystoneThirdPerson/Blueprints/HUD/YouWin.YouWin
 OpenAssetsAtExit=/Game/Player.Player
-OpenAssetsAtExit=/Game/Evan/KeystoneImport/Dragonslayer.Dragonslayer
+OpenAssetsAtExit=/Game/Tanner/Pause_Menu/PauseMenuWidget.PauseMenuWidget
+OpenAssetsAtExit=/Game/Tanner/MainMenu/Widgets/SaveWidget.SaveWidget
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Evan/KeystoneImport/Dragonslayer
-MRUItem1=/Game/Player
-MRUItem2=/Game/Humza/SkeletonNoArmor/SkeletonEnemy
-MRUItem3=/Game/MedievalDungeon/Maps/DungeonLevel
-MRUItem4=/Game/InventorySystem/Consumables/StaminaRegePotion
-MRUItem5=/Game/InventorySystem/Consumables/TalentToken
-MRUItem6=/Game/InventorySystem/Consumables/HealthPotion
-MRUItem7=/Game/MedievalDungeon/Blueprints/WIN
-MRUItem8=/Game/MedievalDungeon/Maps/DungeonLevel2
-MRUItem9=/Game/Alexis/AI/EnemyAiAttacks/Task/Attack1BTtask
-MRUItem10=/Game/Alexis/AI/KnightBT
-MRUItem11=/Game/Alexis/AI/KnightAI_BP
-MRUItem12=/Game/Alexis/AI/EnemyAiAttacks/Deco/IsInCloseRangeDistance
-MRUItem13=/Game/Alexis/AI/EnemyAiAttacks/Task/stanceChange
-MRUItem14=/Game/Alexis/AI/EnemyAiAttacks/Task/chaseplayer
-MRUItem15=/Game/Alexis/AI/EnemyAiAttacks/Task/findplayerlocation
-MRUItem16=/Game/Alexis/AI/KnightBB
-MRUItem17=/Game/Alexis/AI/KnightController
-MRUItem18=/Game/NEW_DungeonLevel_TEST
-MRUItem19=/Game/DungeonTESTLevel1
+MRUItem0=/Game/Tanner/MainMenu/Widgets/SaveWidget
+MRUItem1=/Game/Tanner/Pause_Menu/PauseMenuWidget
+MRUItem2=/Game/Player
+MRUItem3=/Game/KeystoneThirdPerson/Blueprints/HUD/YouWin
+MRUItem4=/Game/MedievalDungeon/Blueprints/WIN
+MRUItem5=/Game/NEW_DungeonLevel_TEST
+MRUItem6=/Game/Tanner/MainMenu/Widgets/CreditWidget
+MRUItem7=/Game/Tanner/Levels/MainMenuLevel
+MRUItem8=/Game/Evan/KeystoneImport/Dragonslayer
+MRUItem9=/Game/Humza/SkeletonNoArmor/SkeletonEnemy
+MRUItem10=/Game/MedievalDungeon/Maps/DungeonLevel
+MRUItem11=/Game/InventorySystem/Consumables/StaminaRegePotion
+MRUItem12=/Game/InventorySystem/Consumables/TalentToken
+MRUItem13=/Game/InventorySystem/Consumables/HealthPotion
+MRUItem14=/Game/MedievalDungeon/Maps/DungeonLevel2
+MRUItem15=/Game/Alexis/AI/EnemyAiAttacks/Task/Attack1BTtask
+MRUItem16=/Game/Alexis/AI/KnightBT
+MRUItem17=/Game/Alexis/AI/KnightAI_BP
+MRUItem18=/Game/Alexis/AI/EnemyAiAttacks/Deco/IsInCloseRangeDistance
+MRUItem19=/Game/Alexis/AI/EnemyAiAttacks/Task/stanceChange
 
 [DetailCategories]
 BP_Openable_Door_C.TransformCommon=True
@@ -2068,10 +2072,22 @@ BP_Cell_Door_Openable_C.Replication=True
 BP_Cell_Door_Openable_C.Collision=True
 BP_Cell_Door_Openable_C.Input=True
 BP_Cell_Door_Openable_C.Actor=True
+YouWin_C.Appearance=True
+YouWin_C.Designer=True
+YouWin_C.Input=True
+YouWin_C.Interaction=True
+YouWin_C.Performance=True
+YouWin_C.Layout=True
+YouWin_C.Behavior=True
+YouWin_C.Render Transform=True
+YouWin_C.Accessibility=True
+YouWin_C.Clipping=True
+YouWin_C.Navigation=True
+YouWin_C.Localization=True
 
 [PlacementMode]
-RecentlyPlaced=/Game/Player.Player;
 RecentlyPlaced=/Game/MedievalDungeon/Blueprints/WIN.WIN;
+RecentlyPlaced=/Game/Player.Player;
 RecentlyPlaced=/Game/AncientTreasures/Meshes/SM_Helmet_01a.SM_Helmet_01a;
 RecentlyPlaced=/Game/AncientTreasures/Meshes/SM_Bowl_01a.SM_Bowl_01a;
 RecentlyPlaced=/Game/AncientTreasures/Meshes/SM_Band_01a.SM_Band_01a;
@@ -2298,7 +2314,7 @@ InventoryInst_C="\"Object.InventoryData\" "
 GameInstance="\"Object.SeveragGameInst\" "
 GameInstance="\"Object.HasDragonSword\" "
 Object="\"Object.SeveragGameInst\" "
-Object="\"Object.HasDragonSword\" "
+Object=
 None=======
 None=======
 None=======
@@ -2314,7 +2330,7 @@ UserWidget=
 Widget=
 Visual=
 InventoryComponent_C="\"Object.Inventory\" "
-ActorComponent="\"Object.Inventory\" "
+ActorComponent=
 Player_C=
 Player_C=
 Player_C=
@@ -2352,7 +2368,7 @@ ChestBP_C="\"Object.Default.Chest_Items\" "
 PreviewMeshCollection="\"Object.SkeletalMeshes\" "
 KnightController_C=
 AIController=
-Controller=
+Controller="\"Object.bShowMouseCursor\" "
 CharacterMovementComponent="\"Object.MaxWalkSpeed\" "
 PawnMovementComponent="\"Object.MaxWalkSpeed\" "
 NavMovementComponent="\"Object.MaxWalkSpeed\" "
@@ -3386,6 +3402,7 @@ Special Effects=False
 Synth=False
 User Created=False
 Advanced=False
+Common=False
 
 [UMGEditor.Designer]
 PreviewWidth=1280
@@ -3540,6 +3557,7 @@ BP_FireCoals_01a_C=PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.
 BP_CandleStick_Iron_C=PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,K2Node_VariableSet.DefaultValueCategory.None,CapsuleComponent.Collision.Collision,KnightAI_BP_C.Physics.ConstraintsGroup,KnightAI_BP_C.Collision.Collision,KnightAI_BP_C.Rendering.TextureStreaming,KnightAI_BP_C.Rendering.LOD,
 SphereComponent=SphereComponent.Collision.Collision,
 Dragonslayer_C=
+YouWin_C=
 
 [SelectionDetails]
 PreserveScaleRatio=True
