--- a/docs/Project/KeyStone/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/docs/Project/KeyStone/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -229,34 +229,29 @@ None=======
 [AssetEditorSubsystem]
 CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
-OpenAssetsAtExit=/Game/Tanner/MainMenu/Widgets/CreditWidget.CreditWidget
-OpenAssetsAtExit=/Game/MedievalDungeon/Blueprints/WIN.WIN
-OpenAssetsAtExit=/Game/KeystoneThirdPerson/Blueprints/HUD/YouWin.YouWin
-OpenAssetsAtExit=/Game/Player.Player
-OpenAssetsAtExit=/Game/Tanner/Pause_Menu/PauseMenuWidget.PauseMenuWidget
-OpenAssetsAtExit=/Game/Tanner/MainMenu/Widgets/SaveWidget.SaveWidget
+OpenAssetsAtExit=/Game/Tanner/MainMenu/Widgets/ControlsWidget.ControlsWidget
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Tanner/MainMenu/Widgets/SaveWidget
-MRUItem1=/Game/Tanner/Pause_Menu/PauseMenuWidget
-MRUItem2=/Game/Player
-MRUItem3=/Game/KeystoneThirdPerson/Blueprints/HUD/YouWin
-MRUItem4=/Game/MedievalDungeon/Blueprints/WIN
-MRUItem5=/Game/NEW_DungeonLevel_TEST
-MRUItem6=/Game/Tanner/MainMenu/Widgets/CreditWidget
-MRUItem7=/Game/Tanner/Levels/MainMenuLevel
-MRUItem8=/Game/Evan/KeystoneImport/Dragonslayer
-MRUItem9=/Game/Humza/SkeletonNoArmor/SkeletonEnemy
-MRUItem10=/Game/MedievalDungeon/Maps/DungeonLevel
-MRUItem11=/Game/InventorySystem/Consumables/StaminaRegePotion
-MRUItem12=/Game/InventorySystem/Consumables/TalentToken
-MRUItem13=/Game/InventorySystem/Consumables/HealthPotion
-MRUItem14=/Game/MedievalDungeon/Maps/DungeonLevel2
-MRUItem15=/Game/Alexis/AI/EnemyAiAttacks/Task/Attack1BTtask
-MRUItem16=/Game/Alexis/AI/KnightBT
-MRUItem17=/Game/Alexis/AI/KnightAI_BP
-MRUItem18=/Game/Alexis/AI/EnemyAiAttacks/Deco/IsInCloseRangeDistance
-MRUItem19=/Game/Alexis/AI/EnemyAiAttacks/Task/stanceChange
+MRUItem0=/Game/Tanner/MainMenu/Widgets/ControlsWidget
+MRUItem1=/Game/Tanner/MainMenu/Widgets/SaveWidget
+MRUItem2=/Game/Tanner/Pause_Menu/PauseMenuWidget
+MRUItem3=/Game/Player
+MRUItem4=/Game/KeystoneThirdPerson/Blueprints/HUD/YouWin
+MRUItem5=/Game/MedievalDungeon/Blueprints/WIN
+MRUItem6=/Game/NEW_DungeonLevel_TEST
+MRUItem7=/Game/Tanner/MainMenu/Widgets/CreditWidget
+MRUItem8=/Game/Tanner/Levels/MainMenuLevel
+MRUItem9=/Game/Evan/KeystoneImport/Dragonslayer
+MRUItem10=/Game/Humza/SkeletonNoArmor/SkeletonEnemy
+MRUItem11=/Game/MedievalDungeon/Maps/DungeonLevel
+MRUItem12=/Game/InventorySystem/Consumables/StaminaRegePotion
+MRUItem13=/Game/InventorySystem/Consumables/TalentToken
+MRUItem14=/Game/InventorySystem/Consumables/HealthPotion
+MRUItem15=/Game/MedievalDungeon/Maps/DungeonLevel2
+MRUItem16=/Game/Alexis/AI/EnemyAiAttacks/Task/Attack1BTtask
+MRUItem17=/Game/Alexis/AI/KnightBT
+MRUItem18=/Game/Alexis/AI/KnightAI_BP
+MRUItem19=/Game/Alexis/AI/EnemyAiAttacks/Deco/IsInCloseRangeDistance
 
 [DetailCategories]
 BP_Openable_Door_C.TransformCommon=True
@@ -2314,7 +2309,7 @@ InventoryInst_C="\"Object.InventoryData\" "
 GameInstance="\"Object.SeveragGameInst\" "
 GameInstance="\"Object.HasDragonSword\" "
 Object="\"Object.SeveragGameInst\" "
-Object=
+Object="\"Object.Appearance.Font\" "
 None=======
 None=======
 None=======
@@ -2327,8 +2322,8 @@ None=======
 None=======
 InventorySlotWG_C=
 UserWidget=
-Widget=
-Visual=
+Widget="\"Object.Appearance.Font\" "
+Visual="\"Object.Appearance.Font\" "
 InventoryComponent_C="\"Object.Inventory\" "
 ActorComponent=
 Player_C=
